--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.15",
     "@tabler/icons-react": "2.30.0",
-    "@types/node": "20.4.5",
+    "@types/node": "^20.4.5",
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "apexcharts": "3.41.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "lodash": "4.17.21",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
