--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "5.15.15",
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.15",
+    "@mui/x-data-grid": "^7.14.0",
     "@tabler/icons-react": "2.30.0",
     "@types/node": "^20.4.5",
     "@types/react": "18.2.18",
