--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "next": "14.2.3",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
