--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apexcharts": "3.41.1",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "firebase": "^10.13.1",
     "lodash": "4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
