--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,6 +6,7 @@
     "background_color": "#ffffff",
     "theme_color": "#000000",
     "display": "standalone",
+    "form_factor": "wide",
     "icons": [
       {
         "src": "/icons/icon-192x192.png",
