--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment-timezone": "^0.5.45",
     "next": "14.2.3",
     "next-pwa": "^5.6.0",
+    "openai": "^4.58.2",
     "react": "18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
